--- a/package.json
+++ b/package.json
@@ -1,27 +1,17 @@
 {
-  "name": "burger",
+  "name": "node_what_todo",
   "version": "1.0.0",
-  "description": "Eat-Da-Burger! is an app that enables customers to enter the names of burgers they want to eat.",
+  "description": "-Node \r -Express \r -MySQL \r -Handlebars \r -Jquery",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/siryaw/burger"
-  },
-  "keywords": [],
-  "author": "siryaw",
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": ""
-  },
-  "homepage": "https://github.com/siryaw/burger",
   "dependencies": {
-    "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
-    "mysql": "^2.15.0"
-  }
+    "mysql": "^2.16.0"
+  },
+  "devDependencies": {}
 }
